--- a/src/EF/Resources.resx
+++ b/src/EF/Resources.resx
@@ -117,6 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CanOnlyProtectStrings" xml:space="preserve">
+    <value>[ProtectedPersonalData] only works strings by default.</value>
+    <comment>error when attribute is used on a non string property.</comment>
+  </data>
   <data name="NotIdentityRole" xml:space="preserve">
     <value>AddEntityFrameworkStores can only be called with a role that derives from IdentityRole&lt;TKey&gt;.</value>
     <comment>error when the role does not derive from IdentityRole</comment>
