--- a/src/Mvc/Mvc.RazorPages/src/Resources.resx
+++ b/src/Mvc/Mvc.RazorPages/src/Resources.resx
@@ -156,4 +156,7 @@
   <data name="StateShouldBeNullForRouteValueTransformers" xml:space="preserve">
     <value>Transformer '{0}' was retrieved from dependency injection with a state value. State can only be specified when the dynamic route is mapped using MapDynamicPageRoute's state argument together with transient lifetime transformer. Ensure that '{0}' doesn't set its own state and that the transformer is registered with a transient lifetime in dependency injection.</value>
   </data>
+  <data name="RazorCompiledItemProvider_NoApplicationParts" xml:space="preserve">
+    <value>At least one '{0}' is required in '{1}'.  If the '{2}' is not configured correctly you should set the '{3}' property.</value>
+  </data>
 </root>
