Create output caching middleware

--- a/src/Mvc/Mvc.Core/src/Resources.resx
+++ b/src/Mvc/Mvc.Core/src/Resources.resx
@@ -510,6 +510,9 @@
   <data name="GetContentTypes_WildcardsNotSupported" xml:space="preserve">
     <value>Could not parse '{0}'. Content types with wildcards are not supported.</value>
   </data>
+  <data name="OutputCacheAttribute_Requires_OutputCachingMiddleware" xml:space="preserve">
+    <value>'{0}' requires the output cache middleware.</value>
+  </data>
   <data name="TryParseModelBinder_InvalidType" xml:space="preserve">
     <value>The type '{0}' does not contain a TryParse method and the binder '{1}' cannot be used.</value>
   </data>
